# yak-game-sfml

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
libs/yak/: .gitignore  CMakeLists.txt
libs/yak/include/: yak.hpp
libs/yak/include/yak/: game.hpp  gameobject.hpp
libs/yak/include/yak/common/: config.hpp
libs/yak/src/: game.cpp
src/: main.cpp
